--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,6 +22,7 @@ jobs:
           toolchain: nightly-2021-07-03
           override: true
           target: wasm32-unknown-unknown
+      - uses: Swatinem/rust-cache@v1
       - name: Run tests
         run: cargo test --all
 
@@ -37,5 +38,6 @@ jobs:
           toolchain: nightly-2021-07-03
           override: true
           components: rustfmt
+      - uses: Swatinem/rust-cache@v1
       - name: Ensure Standard Formatting
         run: cargo fmt -- --check
