--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,5 +1,8 @@
 name: Build and Test
 
+env:
+  RUST_TOOLCHAIN: nightly-2021-07-03
+  
 on:
   push:
     branches: [ main ]
@@ -16,13 +19,19 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
+      - uses: action/cache@v2
+        with:
+          key: ${{ env.GITHUB_JOB }}-${{ env.RUST_TOOLCHAIN }}-${{ hashFiles('Cargo.lock', 'substrate/Cargo.lock') }}
+          paths: |
+          - ${{ env.HOME }}/.cargo
+          - ${{ github.workspace }}/target
+          - ${{ github.workspace }}/substrate/target
       - name: Install nightly
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly-2021-07-03
+          toolchain: ${{ env.RUST_TOOLCHAIN }}
           override: true
           target: wasm32-unknown-unknown
-      - uses: Swatinem/rust-cache@v1
       - name: Run tests
         run: cargo test --all
 
@@ -35,7 +44,7 @@ jobs:
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly-2021-07-03
+          toolchain: ${{ env.RUST_TOOLCHAIN }}
           override: true
           components: rustfmt
       - name: Ensure Standard Formatting
