--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,7 +2,7 @@ name: Build and Test
 
 env:
   RUST_TOOLCHAIN: nightly-2021-07-03
-  
+
 on:
   push:
     branches: [ main ]
@@ -22,7 +22,7 @@ jobs:
       - uses: action/cache@v2
         with:
           key: ${{ env.GITHUB_JOB }}-${{ env.RUST_TOOLCHAIN }}-${{ hashFiles('Cargo.lock', 'substrate/Cargo.lock') }}
-          paths: |
+          paths:
           - ${{ env.HOME }}/.cargo
           - ${{ github.workspace }}/target
           - ${{ github.workspace }}/substrate/target
