--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           key: ${{ env.GITHUB_JOB }}-${{ env.RUST_TOOLCHAIN }}-${{ hashFiles('Cargo.lock', 'substrate/Cargo.lock') }}
-          paths: |
+          path: |
             ${{ env.HOME }}/.cargo
             ${{ github.workspace }}/target
             ${{ github.workspace }}/substrate/target
