--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,8 +1,5 @@
 name: Build and Test
 
-env:
-  RUST_TOOLCHAIN: nightly-2021-07-03
-
 on:
   push:
     branches: [ main ]
@@ -19,19 +16,27 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - uses: actions/cache@v2
-        with:
-          key: ${{ env.GITHUB_JOB }}-${{ env.RUST_TOOLCHAIN }}-${{ hashFiles('Cargo.lock', 'substrate/Cargo.lock') }}
-          path: |
-            ${{ env.HOME }}/.cargo
-            ${{ github.workspace }}/target
-            ${{ github.workspace }}/substrate/target
       - name: Install nightly
+        id: rustup_toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: ${{ env.RUST_TOOLCHAIN }}
+          toolchain: stable
           override: true
           target: wasm32-unknown-unknown
+      - name: set env var
+        run: |
+          echo "home=${HOME}" >> $GITHUB_ENV
+      - uses: actions/cache@v2
+        with:
+          key: ${{ github.job }}-${{ steps.rustup_toolchain.outputs.rustc_hash }}-${{ hashFiles('Cargo.lock', 'substrate/Cargo.lock') }}
+          path: |
+            ${{ env.home }}/.cargo/git
+            ${{ env.home }}/.cargo/registry/index
+            ${{ env.home }}/.cargo/registry/cache
+            ${{ env.home }}/.cargo/.crates2.json
+            ${{ env.home }}/.cargo/.crates.toml
+            ${{ github.workspace }}/target
+            ${{ github.workspace }}/substrate/target
       - name: Run tests
         run: cargo test --all
 
@@ -44,7 +49,7 @@ jobs:
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: ${{ env.RUST_TOOLCHAIN }}
+          toolchain: stable
           override: true
           components: rustfmt
       - name: Ensure Standard Formatting
