--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,7 +41,7 @@ jobs:
       - uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: ${{  steps.check_rc.outputs.rc }}
+          prerelease: ${{ steps.check_rc.outputs.rc }}
           files: |
             target/release/deer-node
             target/release/wbuild/deer-runtime/deer_runtime.compact.wasm 
@@ -49,7 +49,7 @@ jobs:
   docker-hub:
     runs-on: ubuntu-20.04
     needs: ["github-releases"]
-    if: ${{ !needs.github-releases.outputs.rc }}
+    if: needs.github-releases.outputs.rc == 'false'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
