--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - name: Install nightly
+      - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly-2021-07-03
